--- a/Milestone5/milestone5.Rmd
+++ b/Milestone5/milestone5.Rmd
@@ -7,9 +7,12 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
-library(fs)
-library(janitor)
-library(tidyverse)
 ```
 
 ## About
+
+This project explores different housing price statistics in three US regions of particular interest: New York City, San Francisco, and Seattle. New York City has always had notoriously high housing prices, and San Francisco has encountered a crisis of a similar nature in recent years. My project looks at the rise and fall in housing prices over the past twenty years in these two regions to see whether a pattern can be used to predict a similar trend in Seattle. This is motivated by my hypothesis that the housing prices follow big shifts in high income jobs, as can be seen by the shift to Silicon Valley, and most likely to Seattle as well in the next few years. To this end, I have also explored income datasets for these regions.
+
+The dataset I have used has been compiled by the online real estate database company, Zillow. It can be found [at this link](https://www.zillow.com/research/data/).
+
+The Github repository is available [here](https://github.com/sophz55/gov-1005-final-project). Comments and questions can be directed to sophia_zheng@college.harvard.edu.
